Fixed header overflow

--- a/css/default.less
+++ b/css/default.less
@@ -7,7 +7,7 @@
 #overview {
     color: #fff;
     background: url('/images/header.jpg');
-    padding-top: 50px;
+    padding: 25px 0;
     height: 250px;
 }
 
